--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.2.0",
     "pw2": "^1.0.1"
