--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "pw2": "^1.0.1"
   }
