--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.60.0",
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
@@ -37,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.61.0"
   }
 }
