--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "semantic-ui-react": "^2.1.4",
+    "style.css": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
