--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.61.0"
+    "sass": "^1.61.0",
+    "typescript": "^5.0.4"
   }
 }
