--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-image": "^4.1.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
