--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-grid-layout": "^1.3.2",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.61.0"
   }
