image pagina toegevoegd en typfouten in Json gefixt
image pagina toegevoegd en typfouten in Json gefixt

--- a/client/src/json/showcaseProjecten.json
+++ b/client/src/json/showcaseProjecten.json
@@ -12,7 +12,7 @@
 
   {
     "Project": "BattleBot",
-    "Squad": "Rick, Xander, Ruben, Lars en Pieter",
+    "Squad": "Rick, Xander, Ruben, Jelle, Lars en Pieter",
     "Details": "Stap in de ring en laat je overweldigen door de spanning en sensatie van de ultieme mechanische strijd! Battlebots nemen het tegen elkaar op in een epische clash van vernuft, technologie en brute kracht. Bereid je voor op onvergetelijke gevechten en adembenemende tactische manoeuvres. Mis het niet, het is absoluut meeslepend!",
     "Opdrachtgever": "Loek",
     "Src": {
